compiler-core/src/type_/snapshots/gleam_core__type___tests__const_record_spread_variant_without_args_warning.snap
---
source: compiler-core/src/type_/tests.rs
expression: "pub type Status { Active Inactive }\n\n        pub const status1 = Active\n        pub const status2 = Active(..status1)"
---
----- SOURCE CODE
pub type Status { Active Inactive }

        pub const status1 = Active
        pub const status2 = Active(..status1)

----- ERROR
error: Invalid record update
  ┌─ /src/one/two.gleam:4:29
  │
4 │         pub const status2 = Active(..status1)
  │                             ^^^^^^^^^^^^^^^^^ This constructor has no fields

This constructor has no fields to update.
